[gd_scene load_steps=3 format=3 uid="uid://js8wwnnd2jmn"]

[ext_resource type="Script" path="res://Content/Default/Code/Behaviour/Links/TargetDetection/TargetSeenLink.gd" id="1_08pg5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4g26b"]
radius = 12.0

[node name="TargetSeenLink" type="Node3D"]
script = ExtResource("1_08pg5")

[node name="DetectionRange" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionRange"]
shape = SubResource("SphereShape3D_4g26b")

[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
